# fast-jelly

./: .gitignore  README.md  devenv.nix  flake.nix  pyproject.toml
app/: auth.py  auth_core.py  auth_fastapi.py  config.py  configure_auth.py  edgedb_client.py  events.py  main.py  users.py
app/auth_core/: __init__.py  email_password.py  pkce.py
app/auth_fastapi/: __init__.py  email_password.py  session.py
app/queries/: create_event.edgeql  create_event_async_edgeql.py  create_user.edgeql  create_user_async_edgeql.py  delete_user.edgeql  delete_user_async_edgeql.py  get_current_user.edgeql  get_current_user_async_edgeql.py  get_user_by_name.edgeql  get_user_by_name_async_edgeql.py  get_users.edgeql  get_users_async_edgeql.py  update_user.edgeql  update_user_async_edgeql.py
app/ui/: __init__.py  components.py
auth_core/: email_password.py  pkce.py  token_data.py
auth_fastapi/: __init__.py  email_password.py  session.py
dbschema/: default.esdl
dbschema/migrations/: 00001-m1fhbkk.edgeql  00002-m1o3nde.edgeql  00003-m1raar3.edgeql
