[tool.poetry]
name = "fast-jelly"
version = "0.1.0"
description = ""
authors = ["Scott Trinh <scott@scotttrinh.com>"]
readme = "README.md"
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
edgedb = "^2.2.0"
uvicorn = "^0.32.1"
mypy = "^1.13.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
htmy = "^0.3.6"
fasthx = {extras = ["htmy"], version = "^2.1.1"}
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
